Updateon31st dec2023.html
information updated

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <div class="services container">
       <div class="service-top">
         <h2 class="section-title">Career <span>Objective</span></h2>
-        <p><a href="https://github.com/Shakhawat-Shakil">👉👉 Visit my github! 👈👈</a></p>
+        <p><a href="https://github.com/ahmedmshakil">👉👉 Visit my github! 👈👈</a></p>
          <p>“Self-motivated, highly passionate and hardworking student. As a beginner in
           the field of Information Technology, I strive to associate myself with an
           organization where I can utilize my skills in the best possible manner, which
@@ -185,13 +185,11 @@
       <div class="col-right">
         <h1 class="section-title">A BIT ABOUT <span>ME</span></h1>
         <h2>Computer Science  Student</h2>
-        <p>A 2nd year Computer Science student at Independent
-          University, Bangladesh. I enjoys listening to music,
-          watching football matches, playing video games, travelling
-          a lot and so on. As a CS student, I spends most of my time
-          by learning/writing Mathematics, Physics and codes such as Python, HTML, CSS, JavaScript and also believes Django is one
-          of the true dev language. My only ambition is to work
-          independently after graduation!</p>
+        <p>3rd year Computer Science and Engineering student at the Independent University, Bangladesh.
+          Self-motivated, highly passionate and hardworking student. As a beginner in the field of Information Technology,
+          I strive to associate myself with an organization where I can utilize my skills in the best possible manner,
+          which further gives me an opportunity to grow in my career journey while contributing to the development of the organization.
+          My only ambition is to work independently after graduation!</p>
         <a href="#" class="cta">Download Resume</a>
       </div>
     </div>
@@ -213,15 +211,13 @@
           <div class="contact-info">
             <h1>Phone</h1>
             <h2>+880 13** ***291</h2>
-            <h2>+880 15** ***444</h2>
           </div>
         </div>
         <div class="contact-item">
           <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/new-post.png" /></div>
           <div class="contact-info">
             <h1>Email</h1>
-            <h2>shakilahmed.cse21@gmail.com</h2>
-            <h2>sha*******@gmail.com</h2>
+            <h2>ahmedmshakil1@gmail.com</h2>
           </div>
         </div>
         <div class="contact-item">
@@ -260,7 +256,7 @@
           <a href="#"><img src="https://img.icons8.com/stickers/100/000000/github.png" /></a>
         </div>
       </div>
-      <p>Copyright © 2022 Shakhawat_Shakil_Ahmed. All rights reserved</p>
+      <p>Copyright © 2021 ahmedmshakil. All rights reserved</p>
     </div>
   </section>
   <!-- End Footer -->
